# ChangeLog for dev-java/rhino
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/rhino/ChangeLog,v 1.35 2006/03/11 20:06:22 hansmi Exp $

  11 Mar 2006; Michael Hanselmann <hansmi@gentoo.org> rhino-1.6.1-r2.ebuild:
  Stable on ppc.

  19 Feb 2006; Michael Hanselmann <hansmi@gentoo.org> rhino-1.6.1-r2.ebuild:
  Added to ~ppc.

*rhino-1.6.1-r2 (15 Jan 2006)
*rhino-1.5.5-r2 (15 Jan 2006)

  15 Jan 2006; Joshua Nichols <nichoj@gentoo.org> files/jsscript,
  +rhino-1.5.5-r2.ebuild, rhino-1.6.1-r1.ebuild, +rhino-1.6.1-r2.ebuild:
  Fixed slot problem in jsscript (bug #118863). Also fixed collison between 
  1.5 and 1.6 over /usr/bin/jsscript.

  22 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org> rhino-1.6.1-r1.ebuild:
  Stable on sparc

  20 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org> rhino-1.6.1-r1.ebuild:
  Gimme ~sparc

  12 Jul 2005; Thomas Matthijs <axxo@gentoo.org> rhino-1.6.1-r1.ebuild:
  keyword x86

  09 Jul 2005; Thomas Matthijs <axxo@gentoo.org> rhino-1.5.5-r1.ebuild,
  rhino-1.6.1-r1.ebuild:
  fix deps, and source useflag support, small cleanup

  01 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> files/1.5.5_jdk15.patch:
  modified the recently added patch

  31 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> +files/1.5.5_jdk15.patch,
  rhino-1.5.5-r1.ebuild:
  added a patch to fix compilation with jdk1.5, fixes bug #80257

*rhino-1.6.1-r1 (29 Jan 2005)

  29 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> +rhino-1.5.5-r1.ebuild,
  +rhino-1.6.1-r1.ebuild:
  slotted rhino correctly. see #75578

  26 Jan 2005; Markus Rothe <corsair@gentoo.org> rhino-1.5.5.ebuild:
  Stable on ppc64

*rhino-1.6.1 (22 Dec 2004)

  22 Dec 2004; Karl Trygve Kalleberg <karltk@gentoo.org>
  +files/rhino-1.6-gentoo.patch, +rhino-1.6.1.ebuild:
  New upstream release. Ebuild submitted by our all-time favourite contributor
  Jan Brinkmann <lucky@the-luckyduck.de>. Fixes #73018.
