@@ -25,10 +25,10 @@ EBUILD rhino-1.5.5-r2.ebuild 1500 RMD160 fbda2565095153359b296ea5b3e96aa63c6c87e
 MD5 2d5c54a2cb2632a1702fc0344dd949ca rhino-1.5.5-r2.ebuild 1500
 RMD160 fbda2565095153359b296ea5b3e96aa63c6c87e7 rhino-1.5.5-r2.ebuild 1500
 SHA256 965d658c3ad192496358cf71228040541569c0ae34e8a87fe680429b398da283 rhino-1.5.5-r2.ebuild 1500
-EBUILD rhino-1.5.5-r3.ebuild 1331 RMD160 5aa8d205448db64c533f9b54db2cace1e3f8bb9b SHA1 57b0a4cb39d02246bcc44d6d0ebedb91473144cc SHA256 a5e5ebaf7cd631bd430183c23db56aa23c23eecc5f0acfe198b711e112fee4da
-MD5 f9b65fcb6fc3ce61d6bd2879f324a3a2 rhino-1.5.5-r3.ebuild 1331
-RMD160 5aa8d205448db64c533f9b54db2cace1e3f8bb9b rhino-1.5.5-r3.ebuild 1331
-SHA256 a5e5ebaf7cd631bd430183c23db56aa23c23eecc5f0acfe198b711e112fee4da rhino-1.5.5-r3.ebuild 1331
+EBUILD rhino-1.5.5-r3.ebuild 1346 RMD160 fd5af41982a816a20e52d85015d1e455ef8b2d0e SHA1 66001c29dcaa5a5b67c36c9e4af4b96742e4b6b1 SHA256 833a3c72c58c3444f1102acbf440ef66dc97b40e055c68463822b9a0f80b89de
+MD5 7babddc678860f6083306c9fa75b20c3 rhino-1.5.5-r3.ebuild 1346
+RMD160 fd5af41982a816a20e52d85015d1e455ef8b2d0e rhino-1.5.5-r3.ebuild 1346
+SHA256 833a3c72c58c3444f1102acbf440ef66dc97b40e055c68463822b9a0f80b89de rhino-1.5.5-r3.ebuild 1346
 EBUILD rhino-1.6.1-r1.ebuild 1502 RMD160 67f806fafe1bd4893317bfcdeb4025fb5601995c SHA1 21890f2c944c63b8d38201b8d0c7f64a5069438b SHA256 dd90a2974d9048d674e5b17eb9652a2c8fd7635900a80fe6ecaa2b6e4e2dab67
 MD5 269e1cdae8100cb542bf58898ac4e044 rhino-1.6.1-r1.ebuild 1502
 RMD160 67f806fafe1bd4893317bfcdeb4025fb5601995c rhino-1.6.1-r1.ebuild 1502
@@ -37,14 +37,14 @@ EBUILD rhino-1.6.1-r2.ebuild 1524 RMD160 07d20587f31f2c2536eae9b61c321672c9d6d51
 MD5 daa2d1cfd0631d3d057eb67697b1d74e rhino-1.6.1-r2.ebuild 1524
 RMD160 07d20587f31f2c2536eae9b61c321672c9d6d510 rhino-1.6.1-r2.ebuild 1524
 SHA256 7eeda5a6307b2fafad48516d3d404df2d86e26064e78d6d093d2103be7f2a3b1 rhino-1.6.1-r2.ebuild 1524
-EBUILD rhino-1.6.1-r3.ebuild 1349 RMD160 c395b05404dc1694673da678689e128b4e2cba71 SHA1 c577b2a809040c6b70dea0263581970c64218377 SHA256 80fc8b21d6c1d964df97e90c66192ec5a66100bd8271db35dc0e3b58a9307915
-MD5 8f4e52008abc805f7e7ccaa9f12011ad rhino-1.6.1-r3.ebuild 1349
-RMD160 c395b05404dc1694673da678689e128b4e2cba71 rhino-1.6.1-r3.ebuild 1349
-SHA256 80fc8b21d6c1d964df97e90c66192ec5a66100bd8271db35dc0e3b58a9307915 rhino-1.6.1-r3.ebuild 1349
-MISC ChangeLog 4592 RMD160 fbc9082db0c2ce4e0f6127533b8a1fa00e887c04 SHA1 2619ee8bc9278193243aacb2b85a7f195c8fa788 SHA256 d5fc725b0c8d436cf9e5f5a05d7b090c2ce8985ae9ba8886d932582c1da355a4
-MD5 ef2e2c3a8008c9ecca26e1ff8fec233e ChangeLog 4592
-RMD160 fbc9082db0c2ce4e0f6127533b8a1fa00e887c04 ChangeLog 4592
-SHA256 d5fc725b0c8d436cf9e5f5a05d7b090c2ce8985ae9ba8886d932582c1da355a4 ChangeLog 4592
+EBUILD rhino-1.6.1-r3.ebuild 1364 RMD160 4fc81e77c0b3789d9ebb9f1843cd026eac9d37a1 SHA1 14b6c8eb2bcc5a72f41dc2aca09d488571fefaf9 SHA256 6f7c91836d9962938865ed024c7fec899aefa768c89c92393e3c1617bc028a24
+MD5 9059e352fd28c7de2b817b7135b90e1d rhino-1.6.1-r3.ebuild 1364
+RMD160 4fc81e77c0b3789d9ebb9f1843cd026eac9d37a1 rhino-1.6.1-r3.ebuild 1364
+SHA256 6f7c91836d9962938865ed024c7fec899aefa768c89c92393e3c1617bc028a24 rhino-1.6.1-r3.ebuild 1364
+MISC ChangeLog 4724 RMD160 8ec062dc12e95b032dd124a9bcdf313905f2c864 SHA1 9ff1b2af9733beefc3d44acdfd061c0f72719f47 SHA256 ea0b6094dbb1941eeb1900230c03527811ff9cf131ef947cca24cb978908906f
+MD5 4443cb0c6f36140f0506ef09ef8ffd05 ChangeLog 4724
+RMD160 8ec062dc12e95b032dd124a9bcdf313905f2c864 ChangeLog 4724
+SHA256 ea0b6094dbb1941eeb1900230c03527811ff9cf131ef947cca24cb978908906f ChangeLog 4724
 MISC metadata.xml 350 RMD160 a9d78137a7a27bfe6e5972bad36be52b4f5bbbbd SHA1 9715b952c35b52321cbdd1185a42bc4f47f34780 SHA256 99be7320ab28fea03c64ed9eed1d068e09a3b9cdbd61e2014cacf9450417a01a
 MD5 4622606981d4aa0930c917b65cf2f202 metadata.xml 350
 RMD160 a9d78137a7a27bfe6e5972bad36be52b4f5bbbbd metadata.xml 350
