@@ -1,8 +1,8 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/rhino/rhino-1.6.1-r3.ebuild,v 1.1 2006/07/21 01:24:05 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/rhino/rhino-1.6.1-r3.ebuild,v 1.2 2006/07/21 19:03:16 nichoj Exp $
 
-inherit java-pkg-2 eutils
+inherit java-pkg-2 java-ant-2 eutils
 
 MY_P="rhino1_6R1"
 DESCRIPTION="Rhino is an open-source implementation of JavaScript written entirely in Java. It is typically embedded into Java applications to provide scripting to end users"
@@ -21,7 +21,7 @@ DEPEND="dev-java/ant-core
 	source? ( app-arch/zip )
 	${RDEPEND}"
 
-src_unpack() {
+ant_src_unpack() {
 	unpack ${MY_P}.zip
 	cd ${S}
 
